--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   <section class="week">
     <h2>Week 3</h2>
-      <!-- link projects here -->
+      <a href="/Users/katiemacaulay/Desktop/web-workbook/02week/bio/index.html">Bio</a>
   </section>
 
   <section class="week">
