--- a/05week/transitions-and-transformations/index.html
+++ b/05week/transitions-and-transformations/index.html
@@ -7,6 +7,23 @@
     <title></title>
   </head>
   <body>
-
+    <div class="all">
+    <div class="trigger">
+      <div class="box">
+        <div class="box box1"></div>
+        <div class="box box2"></div>
+        <div class="box box3"></div>
+        <div class="box box4"></div>
+        <div class="box box5"></div>
+        <div class="box box6"></div>
+        <div class="box box7"></div>
+        <div class="box box8"></div>
+        <div class="box box9"></div>
+        <div class="box box10"></div>
+        <div class="box box11"></div>
+        <div class="box box12"></div>
+      </div>
+    </div>
+  </div>
   </body>
 </html>
