dom-practice;gettingElementsOnPage

--- a/07week/dom-practice/index.html
+++ b/07week/dom-practice/index.html
@@ -24,12 +24,10 @@
         <p class="paragraph" id="P4">Coleman Lay Z Spa Inflatable Hot Tub: Pamper yourself in relaxing heated water surrounded by soothing bubble jets. Easy to operate digital control panel; automatic start/stop timer-controlled heating system. 4-6 Person Capacity. Inflated walls are made of TriTech material that provides ultimate durability and comfort. Fast, easy set up - inflates using the spa's pump - NO tools needed. </p>
 
     </div>
-    <script src="./js/script.js"></script>
+    <script type="text/javascript" src="./js/script.js"></script>
   </body>
 </html>
 <!-- Create a JS file and write code the will do the following:
-Alert the user to how many list items there are on the page.
-Add a <h2> to the page under the title that says 'You have _ items in your shopping cart'. Do not use html to do this. Use JavaScript.
 Create the ability to add more items to the list using JavaScript.
 Create the ability to remove an item from the shopping cart using javascript.
 Extension Challenge: Create the ability to display a picture of the product when the mouse hovers over the name of the project. -->
